<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile_item_id"
            android:icon="@drawable/ic_profile_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_my_items_id"
            android:icon="@drawable/ic_my_items_black_24dp"
            android:title="@string/added_items" />
        <item
            android:id="@+id/nav_marked_id"
            android:icon="@drawable/ic_marked_black_24dp"
            android:title="@string/marked" />
        <item
            android:id="@+id/nav_item4_id"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/item4" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_item5_id"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/item5" />
            <item
                android:id="@+id/nav_item6_id"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/item6" />
        </menu>
    </item>

</menu>
