<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.hoviat.Hoviat">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:visibility="visible"
        android:id="@+id/lnr_hoviat_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_hovate_id"
            android:text="برای دریافت پیامک حامل رمز یکبارمصرف \n شماره موبایل خود را وارد کنید "
            android:textAlignment="center"
            android:textSize="25sp"
            android:fontFamily="@font/kodak"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:background="@drawable/back_edittext"
            android:layout_margin="25dp"
            android:padding="18dp"
            android:hint="@string/phone_number"
            android:textAlignment="center"
            android:textStyle="bold"
            android:maxLength="11"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/txt_phone_number_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/get_code"
            android:textSize="20sp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/color_withe"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:id="@+id/btn_send_code_id"
            android:layout_margin="35dp"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:visibility="gone"
        android:orientation="vertical"
        android:id="@+id/lnr_code_id"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_fill_code_id"
            android:text="@string/filling_code"
            android:textAlignment="center"
            android:textSize="25sp"
            android:fontFamily="@font/kodak"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:background="@drawable/back_edittext"
            android:layout_margin="25dp"
            android:padding="18dp"
            android:inputType="number"
            android:hint="@string/code"
            android:textAlignment="center"
            android:textStyle="bold"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/txt_code_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/confirm"
            android:textSize="20sp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/color_withe"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:id="@+id/btn_confirm_id"
            android:layout_margin="35dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>