<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.Item_detiels"
    tools:showIn="@layout/activity_item_detiels">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativ_1"
            android:layout_width="match_parent"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/margin_50dp"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:background="@drawable/back_linear_item_detaile"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="1"
                android:gravity="end"
                android:id="@+id/linear_1"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="0.9"
                    android:fontFamily="@font/kodak"
                    android:textColor="@color/color_textview_in_gray_back"
                    android:layout_width="0dp"
                    android:textSize="@dimen/textsize_16sp"
                    android:text="@string/time_access"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_access_time_black_24dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:layout_below="@id/linear_1"
                android:text="@string/example"
                android:layout_marginRight="@dimen/margin_5dp"
                android:layout_marginLeft="@dimen/margin_5dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:id="@+id/txt_content_access_id"
                android:textColor="@color/color_black"
                android:fontFamily="@font/iransans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="1"
                android:gravity="end"
                android:id="@+id/linear_2"
                android:layout_below="@id/txt_content_access_id"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="0.9"
                    android:fontFamily="@font/kodak"
                    android:textColor="@color/color_textview_in_gray_back"
                    android:layout_width="0dp"
                    android:textSize="@dimen/textsize_16sp"
                    android:text="@string/days_service"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_date_range_black_24dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:layout_below="@id/linear_2"
                android:text="@string/day_service_content"
                android:layout_marginRight="@dimen/margin_5dp"
                android:layout_marginLeft="@dimen/margin_5dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:id="@+id/txt_content_days_service_id"
                android:textColor="@color/color_black"
                android:fontFamily="@font/iransans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="1"
                android:gravity="end"
                android:id="@+id/linear_3"
                android:layout_below="@id/txt_content_days_service_id"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="0.9"
                    android:fontFamily="@font/kodak"
                    android:textColor="@color/color_textview_in_gray_back"
                    android:layout_width="0dp"
                    android:textSize="@dimen/textsize_16sp"
                    android:text="@string/address"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_location_on_black_24dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:layout_below="@id/linear_3"
                android:text="@string/address_content"
                android:layout_marginRight="@dimen/margin_5dp"
                android:layout_marginLeft="@dimen/margin_5dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:id="@+id/txt_address_id"
                android:textColor="@color/color_black"
                android:fontFamily="@font/iransans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="1"
                android:gravity="end"
                android:id="@+id/linear_4"
                android:layout_below="@id/txt_address_id"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="0.9"
                    android:fontFamily="@font/kodak"
                    android:textColor="@android:color/holo_blue_dark"
                    android:layout_width="0dp"
                    android:textSize="@dimen/textsize_16sp"
                    android:text="@string/phone"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_local_phone_black_24dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:layout_below="@id/linear_4"
                android:text="02636272725 - 09383974483"
                android:layout_marginRight="@dimen/margin_5dp"
                android:layout_marginLeft="@dimen/margin_5dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:id="@+id/txt_phone_id"
                android:textColor="@android:color/holo_blue_dark"
                android:fontFamily="@font/iransans"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:text="@string/show_table"
            android:layout_below="@id/relativ_1"
            android:layout_margin="@dimen/margin_50dp"
            android:textColor="@color/color_withe"
            android:textStyle="bold"
            android:id="@+id/btn_show_table_sans_id"
            android:textSize="@dimen/textsize_18sp"
            android:textAlignment="center"
            android:background="@drawable/back_button_reserv"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginRight="@dimen/margin_5dp"
            android:layout_below="@id/btn_show_table_sans_id"
            android:layout_height="wrap_content">

            <View
                android:layout_weight="0.94"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:background="@color/gray_color"/>


            <TextView
                android:layout_weight="0.06"
                android:text="@string/comments"
                android:id="@+id/txt_com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>