<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    app:cardElevation="@dimen/elevation_5dp"
    android:layout_margin="4dp"
    android:id="@+id/card_items_id"
    app:cardCornerRadius="@dimen/cardelevation_3dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_item_picture_id"
            android:src="@drawable/image_back_splash"
            android:scaleType="centerCrop"
            android:padding="4dp"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="160dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="0.6"
            android:padding="4dp"
            android:weightSum="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_weight="0.25"
                android:text="@string/sample_name"
                android:textAlignment="center"
                android:textSize="@dimen/textsize_20sp"
                android:textStyle="bold"
                android:id="@+id/txt_items_name_id"
                android:textColor="@color/color_black"
                android:fontFamily="@font/iransans"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <LinearLayout
                android:layout_weight="0.25"
                android:gravity="right"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <TextView
                    android:text="ولنجک"
                    android:id="@+id/txt_items_location_id"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="@dimen/textsize_18sp"
                    android:fontFamily="@font/iransans"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_location_on_black_24dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <TextView
                android:layout_weight="0.25"
                android:text="@string/rate_sample"
                android:textColor="#F1B70B"
                android:textAlignment="center"
                android:textStyle="bold"
                android:id="@+id/txt_items_rate_score_id"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <TextView
                android:layout_weight="0.25"
                android:textStyle="bold"
                android:id="@+id/txt_items_cost_id"
                android:text="@string/cost_sample"
                android:textSize="@dimen/textsize_20sp"
                android:textColor="#0097A7"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>